setup express server + mongodb

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     ],
     "prettier.tabWidth": 4,
     "editor.detectIndentation": false,
-    "beautify.ignore": ""
+    "beautify.ignore": "",
+    "[javascript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    }
 }
