--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^2.1.3",
+    "socket.io-client": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
