--- a/.autogit.yml
+++ b/.autogit.yml
@@ -21,31 +21,32 @@
 hooks:
 # SETUP: Create folder structure for newest release
   setup_before: |
-    export REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"
+    exit 0
   setup_after: |
     exit 0
 
 # INSTALL: Put code in release folder
   install_before: |
-    export REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"
+    echo "REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"" > "./.env"
+    exit 0
   install_after: |
     exit 0
 
 # SHAREDSYMLINK: Create symlink to shared files and folders
 #                present at every release (config, logs, ...)
   sharedsymlink_before: |
-    export REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"
+    exit 0
   sharedsymlink_after: | 
     exit 0
 
 # SYMLINK: Set current symlink to newest release
   symlink_before: |
-    export REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"
+    exit 0
   symlink_after: |
     exit 0
 
 # CLEANUP: Cleanup old releases, two most recent releases remaining
   cleanup_before: |
-    export REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"
+    exit 0
   cleanup_after: |
     exit 0
