--- a/.autogit.yml
+++ b/.autogit.yml
@@ -29,7 +29,7 @@ hooks:
   install_before: |
     exit 0
   install_after: |
-    echo "REACT_APP_SERVER_URI="seashell-app-skvgv.ondigitalocean.app"" > "./.env"
+    echo "REACT_APP_SERVER_URI='https://seashell-app-skvgv.ondigitalocean.app'" > "./.env"
     exit 0
 
 # SHAREDSYMLINK: Create symlink to shared files and folders
