--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "donjayamanne.githistory",
         "pkief.material-icon-theme",
         "christian-kohler.path-intellisense",
-        "dsznajder.es7-react-js-snippets"
+        "dsznajder.es7-react-js-snippets",
+        "IronGeek.vscode-env"
     ]
 }
