Almost fixed a bunch of irregularities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "cSpell.words": [
         "Safezone",
         "Safezones",
-        "signin"
+        "signin",
+        "Woordmerk"
     ],
     "prettier.tabWidth": 4,
     "editor.detectIndentation": false,
